--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,4 @@ Algorithm/.idea/
 Class/.idea/
 Algorithm/Algorithm.iml
 Class/Class.iml
-population_data_2021.csv
+resources/population_data_2021.csv
