--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 Algorithm/.idea/
-Class/.idea/
 Algorithm/Algorithm.iml
+
+Class/.idea/
 Class/Class.iml
-resources/population_data_2021.csv
+
 /buildpath/
+/resources/
